# takopii

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  awesome-android-banker-defense.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  detection_rule.md  rasp_bypass.md
detection/frida/: a11y-monitor.js  ats-monitor.js  clipboard-monitor.js  dcl-monitor.js  dga-monitor.js  evasion-bypass.js  frontier-monitor.js  master-monitor.js  network-monitor.js  nls-monitor.js  overlay-monitor.js  rat-monitor.js  sms-monitor.js
detection/sigma/: a11y-overlay-chain.yml  ats-killchain.yml  dcl-antiforensics.yml  dropper-download.yml  dual-otp-capture.yml  frontier.yml  master.yml  overlay-trigger.yml  rat-behavioral.yml  sms-contentresolver.yml  workmanager-beacon.yml
detection/yara/: banker-shape.yar  dcl-antiforensics.yar  dga.yar  dropper.yar  frontier.yar  intarray-encoding.yar  master.yar  rat-capabilities.yar  resource-sms.yar  sms-stealer.yar
docs/: BLUETEAM-DETECTION.md  REDTEAM-ANALYSIS.md  VT-EVASION-RESEARCH.md
releases/: dropper-v0.1.0.apk  sms-stealer-v0.1.0.apk  stage-1-evasion-v0.1.0.apk
specimens/: BLUETEAM-DETECTION.md  README.md  REDTEAM-ANALYSIS.md  test-c2-server.py
specimens/dropper/: settings.gradle.kts
specimens/overlay-banker/: gradlew  settings.gradle.kts
specimens/overlay-banker/app/src/main/cpp/: CMakeLists.txt  native_protect.cpp
specimens/sms-stealer/: settings.gradle.kts
specimens/stage-1-evasion/: README.md  SPECIMEN.md  build.gradle.kts  settings.gradle.kts
(+276 files in other folders)
